 - Maximised window-state is now saved.
 - Double middle-clicking a nickname in the text area will now select
   it in the userlist.
 - Included a work-around to stop X-Sys plugin crashing with GTK 2.4.
 - Fixed: /list output going to the current tab [970746].
 - Fixed: Serverlist crash while editing a port-number, and switching
   to another network before pressing enter [968652].


----------------------------------------------------------------------
 2.0.9
----------------------------------------------------------------------

 - Updated translations (bg, cs, de, en_GB, eu, fi, lt, nl, ru, sk,
                         uk, wa).
 - Fixed the Socks5 overflow security bug.
 - DCC IP address setting can now be a hostname too (Flavio
   Chierichetti) [773229].
 - Don't try random DCC ports when a range is set (mib) [889987].
 - Fix: Spurious nick completion (mib) [916944].
 - Serverlist passwd box is now masked (Cristian Peraferrer) [920113].
 - Fix: Sometimes messes up the tab order on reconnect (Gabor Szeder)
   [941773].
 - Fix: Crashes when setting $CHARSET to nonexistant charset [945855].
 - Plugin API: Added some fields to the "channels" list.
 - Plugin API: Added "win_status" and "xchatdirfs" fields to
   xchat_get_info.
 - Plugin API: Added xchat_send_modes() function.
 - Fix: Unload, then reload a plugin on FreeBSD fails (Kevin Leung).
 - Plugins should now work on HPUX too.
 - Perl-plugin: Fixes for 3 arg version of emit_print, unhooking the
   same hook multiple times and get_list returning correct values for
   address32 field and some memory leaks (Lian Situ).
 - Made menu keybindings work when the menubar is hidden on GTK 2.4.
 - Added support for the new GTK 2.4 file chooser dialog.
 - Fix for BiDi in xtext (Ilya Konstantinov).
 - Smaller bug fixes [962211] [958599] [950353] and
   [945617] (Frederic Krueger).


----------------------------------------------------------------------
 2.0.8