@@ -33,6 +33,8 @@
  - Fixed: /list output going to the current tab [970746].
  - Fixed: Serverlist crash while editing a port-number, and switching
    to another network before pressing enter [968652].
+ - Made it possible to execute multiple "Connect Command:"s in the
+   ServerList window, when they're separated by ctrl-alt-a.
 
 
 ----------------------------------------------------------------------
